--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@prisma/adapter-pg": "^7.0.0",
     "@prisma/client": "^7.0.0",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-separator": "^1.1.8",
     "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-query": "^5.90.10",
     "better-auth": "^1.3.34",
     "class-variance-authority": "^0.7.1",
@@ -29,6 +32,7 @@
     "react-day-picker": "^9.11.1",
     "react-dom": "19.2.0",
     "resend": "^6.5.2",
+    "rough-notation": "^0.5.1",
     "tailwind-merge": "^3.4.0",
     "zustand": "^5.0.8"
   },
